--- a/portfolio-css.css
+++ b/portfolio-css.css
@@ -48,7 +48,7 @@ body, html {
 }
 
 #landing {
-    background: url("/images/heroimage.png");
+    background: url("images/heroimage.png");
     width: 100%;
     height: 100%;
     min-height: 50%;
