--- a/portfolio-css.css
+++ b/portfolio-css.css
@@ -6,7 +6,7 @@ body, html {
     font-optical-sizing: auto;
     font-weight: 400;
     font-style: normal;
-    font-size: 20pt;
+    font-size: 1.4rem;
 }
 
 #topnav {
@@ -37,7 +37,7 @@ body, html {
     color: #f2f2f2;
     text-align: center;
     text-decoration: none;
-    font-size: 1rem;
+    font-size: 1.4rem;
     padding: 100% 5% 100% 5%;
 }
   
@@ -49,11 +49,12 @@ body, html {
 
 #landing {
     background: url("images/heroimage.png");
-    width: 100%;
-    height: 100%;
-    min-height: 30%;
-    background-size: cover;
-    background-position: center;
+    width: 100vw;
+    height: auto;
+    max-height:100vh;
+    min-height: 60vh;
+    background-size:cover;
+    background-position:top;
     background-repeat: no-repeat;
 
     /*color overlay*/
@@ -65,8 +66,8 @@ body, html {
     /*positioning*/
     overflow: clip;
     position: absolute;
-    left: 10%;
-    top: 21%;
+    left: 10vw;
+    top: 21vh;
 
     /*content organization*/
     display: flex;
@@ -130,9 +131,10 @@ body, html {
 .gallery-item img {
     background-color: white;
     padding-bottom: 50px;
-    max-height: 10%;
-    max-width: 40%;
-    min-width: 40%;
+    max-height: 90vh;
+    height: auto;
+    max-width: 90vw;
+    width: auto;
 
 }
 
@@ -150,24 +152,24 @@ body, html {
 }
 
 .about-subsection {
-    width: 60%;
+    width: 100ch;
+    max-width: 90vw;
     display: flex;
     flex-direction: row;
     justify-content: safe center;
-    align-items: flex-start;
+    align-items: safe center;
 }
 
 #about img {
     border: 5pt solid #f2f2f2 ;
-    min-width: 100pt;
-    width: 70%;
+    min-width: 12vw;
+    width: 10vw;
     height: auto;
-    vertical-align: middle;
-    margin-right: 12pt;
+    margin-right: 3vw;
 }
 
 #about p{
-    line-height: 32pt;
+    line-height: 2.4rem;
 }
 
 #contact {
