--- a/portfolio-css.css
+++ b/portfolio-css.css
@@ -19,8 +19,8 @@ body, html {
     width: 100%;
     background-color: #0e0f15;
     display: flex;
-    justify-content:center;
-    align-items:center;
+    justify-content: right; /*background image-dependent*/
+    align-items: center;
     
 }
 
